--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,10 @@ classifiers = [
 ]
 version="0.0.1"
 dependencies = [
+    "pymysql",
+    "pycrypto",
+    "python-ldap",
+    "flask_admin",
     "flask-login-saml",
     "flask-login-oidc",
     "flask-framework-mvc",
